Update to Java 10 syntax; small optimisations; clean up code.